Organizado estrutura do projeto

--- a/views/watch-now.html
+++ b/views/watch-now.html
@@ -8,9 +8,9 @@
         <header>
             <nav>
                 <a href="/about.html">Sobre</a>
-                <a href="#Linguagens">Linguagens</a>
                 <a href="#Canais">Canais</a>
                 <a href="#Contato">Contato</a>
+                <a href="#Assista">Assista Agora</a>
             </nav>
         </header>
 
