Estilizado Header e reformulado projeto

--- a/views/index.html
+++ b/views/index.html
@@ -2,17 +2,26 @@
 <html lang="pt-BR">
     <head>
         <meta charset="UTF-8">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&family=Press+Start+2P&display=swap" rel="stylesheet"> 
+
+        <link rel="stylesheet" href="/css/components/main-header.css">
+        <link rel="stylesheet" href="/css/components/main-action.css">
+        <link rel="stylesheet" href="/css/reset.css">
+        
         <title>Agrega Dev Cursos</title>
     </head>
     <body>
-        <header>
-            <nav>
-                <a href="/about.html">Sobre</a>
-                <a href="#Canais">Canais</a>
-                <a href="#Contato">Contato</a>
+        <header class="main-header">
+            <nav class="main-menu">
+                <a class="main-action" href="index.html">Sobre</a>
+                <a class="main-action" href="channels.html">Cursos</a>
+                <a class="main-action" href="#Contatos">Contatos</a>
             </nav>
         </header>
 
-
+        <footer></footer>
     </body>
 </html>
