Feito modal + logica do modal

--- a/views/channels.html
+++ b/views/channels.html
@@ -6,9 +6,12 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&family=Press+Start+2P&display=swap" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         <link rel="stylesheet" href="/css/components/main-header.css">
         <link rel="stylesheet" href="/css/components/main-action.css">
+        <link rel="stylesheet" href="/css/components/main-card.css">
+        <link rel="stylesheet" href="/css/components/modal-overlay.css">
         <link rel="stylesheet" href="/css/reset.css">
         
         <title>Agrega Dev Cursos</title>
@@ -23,18 +26,49 @@
         </header>
 <!--**************************CARDs DOS VÍDEOS**************************-->
         <section class="cards">
-            <div class="card" id="GykTLqODQuU">
+            <div class="card" id="WG1EYRhny3M">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="video aula"/>
+                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
+                    <p>Youtube channel from RocketSeat</p>
                 </div>
                 <div class="card__info">
                     <p></p>
-                    <p class="card__price"></p>
+                    
                 </div>
             </div>
         </section>
+
+        <section class="cards">
+            <div class="card" id="xDFzOp2BoS8">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Youtube channel from RocketSeat</p>
+                </div>
+                <div class="card__info">
+                    <p></p>
+                    
+                </div>
+            </div>
+        </section>
+
+
+        <div class="modal-overlay">
+            <div class="modal">
+                <a class="close-modal">
+                    <i class="material-icons">close</i>
+                </a>
+                <div class="modal-content">
+                    <iframe src="" frameborder="0"></iframe>
+                </div>
+            </div>
+        </div>
+    
+        <script src="/src/script.js"></script>
+    
 <!--**************************Footer com creditos e links**************************-->
         <footer></footer>
     </body>
