--- a/views/channels.html
+++ b/views/channels.html
@@ -38,9 +38,132 @@
                     
                 </div>
             </div>
-        </section>
 
-        <section class="cards">
+            <div class="card" id="xDFzOp2BoS8">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Youtube channel from RocketSeat</p>
+                </div>
+                <div class="card__info">
+                    <p></p>
+                    
+                </div>
+            </div>
+            <div class="card" id="WG1EYRhny3M">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Youtube channel from RocketSeat</p>
+                </div>
+                <div class="card__info">
+                    <p></p>
+                    
+                </div>
+            </div>
+
+            <div class="card" id="xDFzOp2BoS8">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Youtube channel from RocketSeat</p>
+                </div>
+                <div class="card__info">
+                    <p></p>
+                    
+                </div>
+            </div>
+            <div class="card" id="WG1EYRhny3M">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Youtube channel from RocketSeat</p>
+                </div>
+                <div class="card__info">
+                    <p></p>
+                    
+                </div>
+            </div>
+
+            <div class="card" id="xDFzOp2BoS8">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Youtube channel from RocketSeat</p>
+                </div>
+                <div class="card__info">
+                    <p></p>
+                    
+                </div>
+            </div>
+            <div class="card" id="WG1EYRhny3M">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Youtube channel from RocketSeat</p>
+                </div>
+                <div class="card__info">
+                    <p></p>
+                    
+                </div>
+            </div>
+
+            <div class="card" id="xDFzOp2BoS8">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Youtube channel from RocketSeat</p>
+                </div>
+                <div class="card__info">
+                    <p></p>
+                    
+                </div>
+            </div>
+            <div class="card" id="WG1EYRhny3M">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Youtube channel from RocketSeat</p>
+                </div>
+                <div class="card__info">
+                    <p></p>
+                    
+                </div>
+            </div>
+
+            <div class="card" id="xDFzOp2BoS8">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Youtube channel from RocketSeat</p>
+                </div>
+                <div class="card__info">
+                    <p></p>
+                    
+                </div>
+            </div>
+            <div class="card" id="WG1EYRhny3M">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Youtube channel from RocketSeat</p>
+                </div>
+                <div class="card__info">
+                    <p></p>
+                    
+                </div>
+            </div>
+
             <div class="card" id="xDFzOp2BoS8">
                 <div class="card__image-container">
                     <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
