Alterações feitas, estilizando

--- a/views/videos.html
+++ b/views/videos.html
@@ -3,25 +3,30 @@
     <head>
         <meta charset="UTF-8">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet"> 
         <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;700&family=Press+Start+2P&display=swap" rel="stylesheet"> 
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-        <link rel="stylesheet" href="/css/components/main-header.css">
-        <link rel="stylesheet" href="/css/components/main-action.css">
-        <link rel="stylesheet" href="/css/components/main-card.css">
-        <link rel="stylesheet" href="/css/components/modal-overlay.css">
+        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="/css/modal-overlay.css">
+        
         <link rel="stylesheet" href="/css/reset.css">
         
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
         <title>Agrega Dev Cursos</title>
     </head>
     <body>
         <header class="main-header">
             <nav class="main-menu">
-                <a class="main-action" href="index.html">Sobre</a>
-                <a class="main-action" href="channels.html">Cursos</a>
-                <a class="main-action" href="#Contatos">Contatos</a>
+                <div class="main-title">
+                    <h1>Agrega Dev Cursos</h1>
+                </div>
+                <div class="main-menu">
+                    <a class="main-action" href="index.html">Sobre</a>
+                    <a class="main-action" href="videos.html">Vídeos</a>
+                </div>
             </nav>
         </header>
 <!--**************************CARDs DOS VÍDEOS**************************-->
