Adicionado os Vídeos

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,10 @@
+body {
+    background: #DDD;
+}
+
 .main-header {
-    display: inline-block;
+    position: relative;
+    display: flex;
     align-items: center;
     justify-content: center;
     background-color: #0f4788;
@@ -38,15 +43,32 @@
     transform: scale(1.05);
     text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.884);
 }
+/* ******************************  Section Sobre  ********************************** */
+section .sobre {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+
+
 
 /* ******************************  Cards  ********************************** */
+.title-videos {
+    display: flex;
+    justify-content: center;
+    padding-top: 30px;
+}
+
 .cards {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
     cursor: pointer;
+    padding-bottom: 30px;
 }
 
 .card {
@@ -58,13 +80,32 @@
     width: 100%;
     border-radius: 10px;
 }
+.card__content {
+    font-family: 'Space Mono', monospace;
+    color: #fff;
+}
 
 .card__content, 
 .card__info {
     padding: 24px;
 }
 
-.card__info {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+
+/* ******************************  Footer  ********************************** */
+
+footer {
+    position: relative;
+    background-color: #0f4788;
+    border-top: 10px solid #2f1a8b;
+    height: 100px;
+    width: 100%;
+    bottom: 0;
+    padding-top: 30px;
+    
+}
+
+footer p{
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
 }
