--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,14 @@
                 </div>
             </nav>
         </header>
-
-        <footer></footer>
+        <section class="sobre">
+            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In provident veritatis laudantium magnam eum fuga inventore iure eveniet. Iste blanditiis quas iure repellat quod veniam accusamus delectus culpa rem sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam porro, hic exercitationem esse voluptas laboriosam voluptatem omnis molestiae nisi ab officiis quibusdam nesciunt quos illo quidem eligendi labore fugiat velit.
+                Eligendi, tenetur. Repellendus, officiis nihil? Fuga fugiat doloremque autem quia aliquam vero officia non doloribus nesciunt, enim reiciendis sit eligendi qui animi dignissimos similique veniam nostrum eum blanditiis modi optio.
+                Aliquam magni sint vitae quod odit et, ad earum hic! Ut soluta earum, inventore quaerat harum, reiciendis pariatur eveniet officia architecto, asperiores natus doloremque quidem eius exercitationem magnam. Dolorem, iusto?</h1>
+                <img src="/assets/img/undraw_Developer_activity_re_39tg(1).png" alt="">
+        </section>
+        <footer>
+            <p>© 2022 · Fernando Azevedo </p>
+        </footer>
     </body>
 </html>
