--- a/views/videos.html
+++ b/views/videos.html
@@ -30,154 +30,174 @@
             </nav>
         </header>
 <!--**************************CARDs DOS VÍDEOS**************************-->
+
+        <h1 class="title-videos">Vídeos da RocketSeat</h1>
+        <p class="title-videos">Vejam aqui alguns vídeos para que possa iniciar no mundo da programação!</p>
+        <p class="title-videos">clique nos cards e assista em sair da nossa página!</p>        
+
         <section class="cards">
-            <div class="card" id="WG1EYRhny3M">
+            <div class="card" id="vAV4Vy4jfkc">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="http://i3.ytimg.com/vi/vAV4Vy4jfkc/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
-                    <p>Youtube channel from RocketSeat</p>
+                    <p>Princípios SOLID em uma API REST com Node.js e TypeScript </p>
                 </div>
                 <div class="card__info">
-                    <p></p>
+                    <p>Nesse vídeo vamos resumir os princípios do SOLID e mostrar como conseguiríamos aplicar esses conceitos em uma API REST utilizando Node.js e TypeScript.</p>
                     
                 </div>
             </div>
 
-            <div class="card" id="xDFzOp2BoS8">
+            <div class="card" id="sg1zFpNM5Jw">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="http://i3.ytimg.com/vi/sg1zFpNM5Jw/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
-                    <p>Youtube channel from RocketSeat</p>
+                    <p>TDD na prática - (Live Coding)</p>
                 </div>
                 <div class="card__info">
-                    <p></p>
-                    
-                </div>
-            </div>
-            <div class="card" id="WG1EYRhny3M">
-                <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
-                </div>
-                <div class="card__content">
-                    <p>Youtube channel from RocketSeat</p>
-                </div>
-                <div class="card__info">
-                    <p></p>
+                    <p>Nosso CTO Diego Fernandes vai estar ao vivo com Rodrigo Manguinho, Fundador e Instrutor da 4Dev Academy, para uma sessão de live-coding de TDD na prática.</p>
                     
                 </div>
             </div>
 
-            <div class="card" id="xDFzOp2BoS8">
+            <div class="card" id="9AO2hZJsHrs">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="http://i3.ytimg.com/vi/9AO2hZJsHrs/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
-                    <p>Youtube channel from RocketSeat</p>
+                    <p>CRUD com Node.JS, Express, TypeORM e PostgreSQL</p>
                 </div>
                 <div class="card__info">
-                    <p></p>
-                    
-                </div>
-            </div>
-            <div class="card" id="WG1EYRhny3M">
-                <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
-                </div>
-                <div class="card__content">
-                    <p>Youtube channel from RocketSeat</p>
-                </div>
-                <div class="card__info">
-                    <p></p>
+                    <p>Nesse vídeo vamos aprender como criar uma aplicação em Node.JS do zero, integrando com banco de dados e criando um CRUD. Junto com nossa educadora Dani Evangelista, vamos ver na prática como é possível fazer tudo isso utilizando Express, TypeORM e PostgreSQL.</p>
                     
                 </div>
             </div>
 
-            <div class="card" id="xDFzOp2BoS8">
+            <div class="card" id="TBplwrsUj4s">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="http://i3.ytimg.com/vi/TBplwrsUj4s/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
-                    <p>Youtube channel from RocketSeat</p>
+                    <p>Boas práticas para escrever um HTML profissional</p>
                 </div>
                 <div class="card__info">
-                    <p></p>
-                    
-                </div>
-            </div>
-            <div class="card" id="WG1EYRhny3M">
-                <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
-                </div>
-                <div class="card__content">
-                    <p>Youtube channel from RocketSeat</p>
-                </div>
-                <div class="card__info">
-                    <p></p>
+                    <p>Junto com nosso educador Mayk Brito vamos conhecer habilidades e comportamentos que vão melhorar seu código, incluindo dicas de como escrever melhor seu HTML ou como funciona um HTML mais semântico, como criar páginas com melhores resultados nas páginas de busca do Google (SEO) e com melhor acessibilidade para os usuários.</p>
                     
                 </div>
             </div>
 
-            <div class="card" id="xDFzOp2BoS8">
+            <div class="card" id="VM4e37DaskU">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="http://i3.ytimg.com/vi/VM4e37DaskU/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
-                    <p>Youtube channel from RocketSeat</p>
+                    <p>Consumindo API no front-end com AXIOS</p>
                 </div>
                 <div class="card__info">
-                    <p></p>
-                    
-                </div>
-            </div>
-            <div class="card" id="WG1EYRhny3M">
-                <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
-                </div>
-                <div class="card__content">
-                    <p>Youtube channel from RocketSeat</p>
-                </div>
-                <div class="card__info">
-                    <p></p>
+                    <p>O que é uma API? As Interfaces de Programação de Aplicativos são super importante para devs, mas você já parou para pensar como as APIs participam da nossa rotina de programadores? Junto com nossa educadora Jakeliny Gracielly, vamos entender como consumir uma API no front-end, construído em JavaScript, com AXIOS sem usar frameworks.</p>
                     
                 </div>
             </div>
 
-            <div class="card" id="xDFzOp2BoS8">
+            <div class="card" id="DemagUML778">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="http://i3.ytimg.com/vi/DemagUML778/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
-                    <p>Youtube channel from RocketSeat</p>
+                    <p>Como organizar um cronograma de estudos de programação com Notion?</p>
                 </div>
                 <div class="card__info">
-                    <p></p>
-                    
-                </div>
-            </div>
-            <div class="card" id="WG1EYRhny3M">
-                <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
-                </div>
-                <div class="card__content">
-                    <p>Youtube channel from RocketSeat</p>
-                </div>
-                <div class="card__info">
-                    <p></p>
+                    <p>Notion é um aplicativo com várias ferramentas de organização que pode ser um grande apoio pra te ajudar a ser uma pessoa mais produtiva. Mas tendo tantas opções e formas de uso, pode ser que você se perca e não aproveite tão bem todas as funcionalidades disponíveis por lá. </p>
                     
                 </div>
             </div>
 
-            <div class="card" id="xDFzOp2BoS8">
+            <div class="card" id="hRGLRHAsbZo">
                 <div class="card__image-container">
-                    <img src="http://i3.ytimg.com/vi/S5Qvi23VqaQ/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                    <img src="http://i3.ytimg.com/vi/hRGLRHAsbZo/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
                 </div>
                 <div class="card__content">
-                    <p>Youtube channel from RocketSeat</p>
+                    <p>Banco de dados: O que é e quais existem?</p>
                 </div>
                 <div class="card__info">
-                    <p></p>
+                    <p>Banco de dados é um recurso muito utilizado por devs de todas as stacks, vamos aprender o que é banco de dados, a diferença básica de relacional ou não relacional (NoSQL), alguns serviços bem legais pra vc conhecer e um site que mostra o ranking dos banco de dados mais utilizados no mundo</p>
+                    
+                </div>
+            </div>
+
+            <div class="card" id="fZZAt0Sbz5k">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/fZZAt0Sbz5k/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>JAVASCRIPT: Vamos construir um WEB Component e aprender Shadow DOM</p>
+                </div>
+                <div class="card__info">
+                    <p>Usamos WEB Components quando precisamos encapsular ou abstrair um código, deixando-o separado e escondido dos outros códigos
+
+                        Podemos colocar nossa estrutura (HTML), estilos (CSS) e comportamento (JS), fora da DOM principal do nosso app, deixando nosso código mais limpo.
+                        
+                        Temos o exemplo da tag video que contém vários elementos estruturais, estilos e comportamento, porém, a gente só vê a tag vídeo no nosso código. 
+                        
+                        Fazemos tudo isso usando a Shadow DOM e muitos outros princípios trazidos pelo WEB Components</p>
+                    </p>
+                    
+                </div>
+            </div>
+
+            <div class="card" id="q2zA4OOjx2g">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/q2zA4OOjx2g/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Quase tudo sobre o Universo CSS</p>
+                </div>
+                <div class="card__info">
+                    <p>No universo do CSS, conhecer tudo (ou quase tudo) sobre display vai te ajudar a dormir melhor, confia em mim.
+
+                        Quando alguma propriedade que você aprendeu não está funcionado em algum elemento,talvez o display do elemento não esteja muito claro para você.
+                        
+                        Com as dicas nesse vídeo, vamos melhorar nosso conhecimento de displays e ganharemos maior clareza de como funcionam e quando usar um ou outro.
+                </div>
+            </div>
+
+            <div class="card" id="lJH-Ovx6KWA">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/lJH-Ovx6KWA/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Comandos fundamentais do SQL: SELECT, UPDATE, INSERT E DELETE</p>
+                </div>
+                <div class="card__info">
+                    <p>No Root de hoje vamos conhecer 4 comandos SQL fundamentais para interagir com bancos SQL, SELECT,  UPDATE, INSERT E DELETE. Bora codar?</p>
+                    
+                </div>
+            </div>
+
+            <div class="card" id="klgtCYfpYyU">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/klgtCYfpYyU/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Scope no Javascript de maneira simples e prática</p>
+                </div>
+                <div class="card__info">
+                    <p>Nesse vídeo eu trouxe mais de 5 escopos no JavaScript e como funciona a visibilidade das nossas variáveis criadas em diferentes escopos (scope) além de visualizarmos como é que cada tipo de criação de variável funciona em cada escopo.</p>
+                    
+                </div>
+            </div>
+
+            <div class="card" id="gn7PHkYLDZU">
+                <div class="card__image-container">
+                    <img src="http://i3.ytimg.com/vi/gn7PHkYLDZU/maxresdefault.jpg" alt="canal da RocketSeat no Youtube"/>
+                </div>
+                <div class="card__content">
+                    <p>Estilizando o nosso terminal para produtividade</p>
+                </div>
+                <div class="card__info">
+                    <p>Passamos muito tempo dentro do terminal, que tal experimentar a configuração com Oh My ZSH? No vídeo de hoje, nossa educadora Jakeliny vai mostrar como instalar temas para deixar nosso local de trabalho visualmente agradável e, de quebra, ainda vai ajudar a nossa produtividade.</p>
                     
                 </div>
             </div>
@@ -198,6 +218,8 @@
         <script src="/src/script.js"></script>
     
 <!--**************************Footer com creditos e links**************************-->
-        <footer></footer>
+        <footer>
+            <p>© 2022   ·   Fernando Azevedo </p>
+        </footer>
     </body>
 </html>
