Adicionado texto na página sobre

--- a/views/index.html
+++ b/views/index.html
@@ -27,10 +27,24 @@
             </nav>
         </header>
         <section class="sobre">
-            <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In provident veritatis laudantium magnam eum fuga inventore iure eveniet. Iste blanditiis quas iure repellat quod veniam accusamus delectus culpa rem sapiente. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam porro, hic exercitationem esse voluptas laboriosam voluptatem omnis molestiae nisi ab officiis quibusdam nesciunt quos illo quidem eligendi labore fugiat velit.
-                Eligendi, tenetur. Repellendus, officiis nihil? Fuga fugiat doloremque autem quia aliquam vero officia non doloribus nesciunt, enim reiciendis sit eligendi qui animi dignissimos similique veniam nostrum eum blanditiis modi optio.
-                Aliquam magni sint vitae quod odit et, ad earum hic! Ut soluta earum, inventore quaerat harum, reiciendis pariatur eveniet officia architecto, asperiores natus doloremque quidem eius exercitationem magnam. Dolorem, iusto?</h1>
-                <img src="/assets/img/undraw_Developer_activity_re_39tg(1).png" alt="">
+            <div class="wrapper">
+                <h2>Aprenda sobre programação hoje sem sair de casa!</h2>
+                <p>A indústria da tecnologia e da informação não pára de crescer. E a demanda por programadores tem se intensificado a cada ano. Seja por oportunidades de trabalho ou simplesmente por lazer, você pode aprender como programar sem sair de casa. E, o mais interessante: de forma gratuita.</p>
+                <p>Aprender como programar significa que você vai estar capacitado para trabalhar com linhas de códigos (simples e complexas), misturar linguagens de programação, desenvolver sistemas, aplicações e influenciar no progresso da tecnologia da informação.
+                    Levando isso em conta, veja o que você vai poder fazer assim que tiver um nível mais avançado sobre programação.
+                </p>
+                 <ul>
+                    <li><b>Criar Sites</b> – Criação de páginas específicas para qualquer tipo de negócio online. Numa combinação de linguagens de programação, você vai poder criar um site estático ou dinâmico com mais autonomia, sem depender exatamente um CMS. E, mesmo que precise usar um, você mesmo vai poder fazer melhorias sem precisar contratar um programador pois, agora, você mesmo é um.</li>
+                    <li><b>Sistemas Operacionais</b> – São a base de funcionamento de qualquer computador, assim como celulares, eletrônicos e eletrodomésticos inteligentes. Alinhando códigos de programação, você vai poder desenvolver sistemas integrados e fazer com que máquinas reajam aos comandos dos usuários, sejam por cliques no mouse ou comandos por voz.</li>
+                    <li><b>Jogos Eletrônicos</b> – A indústria dos games é uma das que mais fatura todos os anos. E esse potencial de crescimento não vai ser freado tão cedo. Você vai poder integrar equipes de desenvolvimento e usar seus conhecimentos para criar games para computadores, consoles, videogames portáteis e demais dispositivos móveis (smartphones, tablets e aparelhos inteligentes compatíveis), além de trabalhar com motores gráficos de última geração.</li>
+                    <li><b>Aplicativos</b> – A facilidade do acesso a celulares de última geração e o recorde de faturamento no iTunes e Google Play só mostra que o mercado de apps não para de crescer. Atualmente, é comum empresas, marcas e negócios contratarem profissionais para criarem aplicativos dedicados aos seus produtos e serviços. Ao alcance de dois ou três clique, sua solução pode estar nestas lojas e estar entre os mais baixados e fazer parte da vida de milhões de pessoas.</li>
+                </ul>
+                    
+                    <h3>Clique <a href="videos.html">AQUI</a> ou na aba Vídeos para começar a assistir os vídeos agora e se tornar um programador de sucesso</h3>
+            </div>
+            <div class="wrapper-image"></div>
+                <img src="/assets/img/undraw_web_developer_re_h7ie.svg" alt="">
+            </div>
         </section>
         <footer>
             <p>© 2022 · Fernando Azevedo </p>
