--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ section {
     display: flex;
     flex-direction: row;
     gap: 10px;
-    margin-left: 10px;
+    margin: 80px;
 }
 
 section ul {
